fix: Optimizar imagem docker